[tool.poetry]
name = "ldk-lnprototest"
version = "0.0.1"
description = "lnprototest runner for ldk"
authors = ["Prakhar Saxena <prakharrsaxena@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-bitcoinlib = "^0.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.0.1"
pyln-bolt4 = "^1.0.222"
pyln-bolt2 = "^1.0.222"
pyln-bolt1 = "^1.0.222"
pyln-client = "^0.12.0"
crc32c = "^2.2.post0"
pyln-bolt7 = "^1.0.246"
pyln-proto = "^23.5.2"
python-bitcoinlib = "^0.11.2"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest-xdist = "^3.1.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
